// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClusterTypeLabel for ROSA hypershift 1`] = `
<Tooltip
  content="Red Hat OpenShift Service on AWS - Hosted control plane"
>
  <span>
    ROSA - Hosted
    <br />
    <PreviewLabel
      creationDateStr="2021-01-10T15:17:16.278663Z"
    />
  </span>
</Tooltip>
`;

exports[`ClusterTypeLabel for classic ROSA 1`] = `
<Tooltip
  content="Red Hat OpenShift Service on AWS"
>
  <span>
    ROSA
  </span>
</Tooltip>
`;
